samples/_failures_safe/1761435938_26f78f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00418dda.c: In function ‘tokenize’:
./samples/SAFE/__tmp_00418dda.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_00418dda.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00418dda.c:160:13: error: expected declaration or statement at end of input
